--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "A visual tool for wiring the Internet of Things.",
   "keywords": [ "Node-RED", "IoT", "Internet of Things", "node.js", "node" ],
   "website": "http://nodered.org/",
-  "repository": "https://github.com/joeartsea/node-red-heroku.git",
+  "repository": "https://github.com/xzonepiece/node-red-heroku",
   "logo": "http://nodered.org/node-red.png",
   "success_url": "/",
   "env": {
@@ -16,5 +16,5 @@
       "value": ""
     }
   },
-  "addons": [ "mongolab" ]
+  "addons": [ "" ]
 }
