--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "node-red-contrib-scx-ibmiotapp":"0.x",
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
-        "node-red-nodes-cf-sqldb-dashdb":"0.x"
+        "node-red-nodes-cf-sqldb-dashdb":"0.x",
+        "node-red-node-mongodb":"0.x"
     },
     "engines": {
         "node": "0.10.x"
