--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
         "node-red-contrib-ibmpush":"0.x",
         "node-red-contrib-bluemix-hdfs":"0.x",
         "node-red-nodes-cf-sqldb-dashdb":"0.x",
-        "node-red-node-mongodb":"0.x"
+        "node-red-dashboard":"2.0.1",
+        "node-red-node-pushbullet":"0.0.9",
+        "node-red-node-instagram":"0.1.0",
+        "node-red-node-flickr":"0.1.1",
+        "node-red-contrib-slack":"0.1.1",
+        "node-red-contrib-googlechart":"0.0.10",
+        "node-red-contrib-github":"0.1.5"
     },
     "engines": {
         "node": "0.10.x"
